--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-fileupload": "^1.4.0",
     "express-handlebars": "^7.1.2",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mongodb": "^5.8.1",
     "morgan": "~1.9.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "package.json": "^2.0.1"
   }
 }
